# picograd

./: .gitignore  MNIST_test.py  README  README.md  build.sh  conv2d.cc  conv_test.py  draw_utils.py  loss.py  nn.py  notes.txt  optim.py  requirements.txt  simple_test.py  tensor.py  test_nn.py  util.py
.github/workflows/: tests.yml
backend/: ops.py
examples/: MNIST.py  MNIST_simple.py  MNIST_test.py
extra/: new_backend.txt  test_ast.py
picograd/: CMakeLists.txt  __init__.py  draw_utils.py  loss.py  nn.py  optim.py  print_utils.py  tensor.py  util.py
picograd/backend/: device.py  dtypes.py  function.py  linearizer.py  ops.py  scheduler.py  uop.py
picograd/backend/cpu/: ops.py
picograd/backend/cuda/: cuda.py  error.py  math.py  ops.py  types.py  utils.py
picograd/backend/cuda/kernels/: add.cu  conv2d.cu  conv2d_back.cu  cre.cu  cre_back.cu  matmul.cu  mul.cu  relu.cu  relu_back.cu  softmax.cu  softmax_back.cu  transpose_back.cu
picograd/backend/renderer/: cstyle.py  cuda.py  cuda_renderer.py
picograd/cpp-src/: conv2d.cc  matmul.cc
test/: MNIST_test.py  conv_test.py  cuda_test.py  grad_test.py  ops_test.py  simple_test.py  test_dot.py  test_loss.py  test_ops.py  test_pooling.py
tests/: conv_test.py  norm_test.py  ops_test.py  tensor_test.py  test_conv2d.py  test_dot.py  test_graph.py  test_module.py  test_movement_ops.py  test_nn.py  test_ops.py  test_pooling.py  test_reduce_ops.py  test_relu.py  test_residual.py  test_rnn.py  test_simple_ops.py  test_unary_ops.py
